[dyad] تنفيذ تحسينات شاملة على الواجهة المرئية - wrote 37 file(s)

--- a/index.html
+++ b/index.html
@@ -109,12 +109,15 @@
         --card-border: rgba(0,0,0,0.06);
         --card-shadow: 0 4px 6px -1px rgba(0,0,0,0.05), 0 2px 4px -1px rgba(0,0,0,0.03);
         --card-text: #1c1917;
-        --gender-male-text: #0f766e; /* Teal 700 */
-        --gender-female-text: #be185d; /* Pink 700 */
-        --gender-male-border: #5eead4;
-        --gender-female-border: #fbcfe8;
+        --gender-male-text: #0d9488; /* Brand 600 */
+        --gender-female-text: #db2777; /* Pink 600 */
+        --gender-male-border: #2dd4bf; /* Brand 400 */
+        --gender-female-border: #f472b6; /* Pink 400 */
         --link-line-stroke: #a8a29e; /* Stone 400 */
-        --focus-ring-color: #0d9488; /* Brand Teal */
+        --focus-ring-color: #0d9488; /* Brand 600 */
+        --primary-button-bg: #0d9488;
+        --primary-button-hover-bg: #0f766e;
+        --primary-button-text: #ffffff;
       }
       .dark .theme-modern {
         --theme-bg: #0c0a09;
@@ -122,53 +125,65 @@
         --card-border: rgba(255,255,255,0.08);
         --card-shadow: 0 4px 6px -1px rgba(0,0,0,0.3);
         --card-text: #f5f5f4;
-        --gender-male-text: #5eead4; /* Teal 300 */
+        --gender-male-text: #5eead4; /* Brand 300 */
         --gender-female-text: #f9a8d4; /* Pink 300 */
         --gender-male-border: #5eead4;
-        --gender-female-border: #fbcfe8;
-        --link-line-stroke: #57534e;
-        --focus-ring-color: #2dd4bf;
+        --gender-female-border: #f9a8d4;
+        --link-line-stroke: #57534e; /* Stone 700 */
+        --focus-ring-color: #2dd4bf; /* Brand 400 */
+        --primary-button-bg: #2dd4bf;
+        --primary-button-hover-bg: #14b8a6;
+        --primary-button-text: #1c1917;
       }
 
       .theme-vintage {
-        --theme-bg: #f4e4bc;
+        --theme-bg: #f4e4bc; /* Light brown paper */
         --card-bg: rgba(253, 246, 227, 0.9);
-        --card-border: #8b7355;
+        --card-border: #8b7355; /* Darker brown */
         --card-shadow: 2px 2px 5px rgba(60, 40, 20, 0.2);
-        --card-text: #4a3b2a;
-        --gender-male-text: #5c4b37;
-        --gender-female-text: #8b5a2b;
+        --card-text: #4a3b2a; /* Very dark brown */
+        --gender-male-text: #5c4b37; /* Medium brown */
+        --gender-female-text: #8b5a2b; /* Orange-brown */
         --gender-male-border: #5c4b37;
         --gender-female-border: #8b5a2b;
         --link-line-stroke: #8b7355;
         --focus-ring-color: #8b7355;
+        --primary-button-bg: #8b7355;
+        --primary-button-hover-bg: #7a654d;
+        --primary-button-text: #fdfbf7;
       }
       .dark .theme-vintage {
-        --theme-bg: #3a3020;
+        --theme-bg: #3a3020; /* Dark brown */
         --card-bg: rgba(58, 48, 32, 0.9);
-        --card-border: #b8a280;
+        --card-border: #b8a280; /* Light brown */
         --card-shadow: 2px 2px 5px rgba(0,0,0,0.5);
-        --card-text: #e0d0b0;
+        --card-text: #e0d0b0; /* Light beige */
         --gender-male-text: #b8a280;
         --gender-female-text: #d0b090;
         --gender-male-border: #b8a280;
         --gender-female-border: #d0b090;
         --link-line-stroke: #b8a280;
         --focus-ring-color: #b8a280;
+        --primary-button-bg: #b8a280;
+        --primary-button-hover-bg: #a39070;
+        --primary-button-text: #3a3020;
       }
 
       .theme-blueprint {
-        --theme-bg: #1e3a8a;
+        --theme-bg: #1e3a8a; /* Dark blue */
         --card-bg: rgba(30, 58, 138, 0.9);
-        --card-border: #93c5fd;
+        --card-border: #93c5fd; /* Light blue */
         --card-shadow: 0 0 10px rgba(147, 197, 253, 0.2);
-        --card-text: #dbeafe;
+        --card-text: #dbeafe; /* Very light blue */
         --gender-male-text: #93c5fd;
         --gender-female-text: #fff;
         --gender-male-border: #93c5fd;
         --gender-female-border: #fff;
         --link-line-stroke: #93c5fd;
         --focus-ring-color: #fff;
+        --primary-button-bg: #93c5fd;
+        --primary-button-hover-bg: #60a5fa;
+        --primary-button-text: #1e3a8a;
       }
       .dark .theme-blueprint {
         --theme-bg: #1e3a8a;
@@ -182,6 +197,9 @@
         --gender-female-border: #fff;
         --link-line-stroke: #93c5fd;
         --focus-ring-color: #fff;
+        --primary-button-bg: #93c5fd;
+        --primary-button-hover-bg: #60a5fa;
+        --primary-button-text: #1e3a8a;
       }
     </style>
   <script type="importmap">
