--- a/index.html
+++ b/index.html
@@ -56,13 +56,9 @@
       body { 
         margin: 0; 
         font-family: 'Inter', 'Cairo', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; 
-        background-color: #fafaf9; /* Warm off-white */
-        color: #1c1917;
+        background-color: var(--theme-bg);
+        color: var(--card-text);
         -webkit-font-smoothing: antialiased;
-      }
-      .dark body {
-        background-color: #0c0a09; /* Very dark warm grey */
-        color: #f5f5f4;
       }
       
       /* Typographic improvements for Arabic */
